# Aegis-Ultra

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  OPS_MASTER.ps1  QUICKSTART.md  README.md  SECURITY.md  VERIFY_DOMINANCE_RELEASE.ps1  aegis_audit.jsonl
docker/: Dockerfile  docker-compose.yml
k8s/: aegis.yaml
policy/rego/: aegis.rego
release/: sha256sums.txt
scripts/: APPLY_DOMINANCE_V1_FIX.ps1  APPLY_FORCE_DENY.ps1  BUILD_ALL.ps1  BUILD_GM_PACKAGE.ps1  GEN_KEYS.ps1  OPS_MASTER_START.ps1  OPS_MASTER_STOP.ps1  PREFLIGHT.ps1  RELEASE_PACK.ps1  RUN_DOCKER.ps1  SHIP_PRODUCT.ps1  SHIP_VERIFY_ALL.ps1  SMOKE_DOMINANCE.ps1  SMOKE_SHIP.ps1  SMOKE_TEST.ps1  WRITE_REST.ps1  _bundle.rs.txt  _config.rs.txt  _dlp.rs.txt  _gateway.rs.txt  _opa.rs.txt  _tools_mod.rs.txt  gen_keys.py
src/: approvals.rs  audit.rs  bundle.rs  config.rs  decision.rs  dlp.rs  gateway.rs  main.rs  opa.rs  ui.rs
src/tools/: mod.rs  registry.rs
src/tools/sandbox/: native.rs
